--- a/Login-Control/Login-Control/App.xaml
+++ b/Login-Control/Login-Control/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="LoginControl.App"
+﻿<Application x:Class="Login_Control.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LoginControl"
+             xmlns:local="clr-namespace:Login_Control"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
