--- a/Login-Control/Login-Control/MainWindow.xaml
+++ b/Login-Control/Login-Control/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="LoginControl.MainWindow"
+﻿<Window x:Class="Login_Control.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LoginControl"
+        xmlns:local="clr-namespace:Login_Control"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
