--- a/Login-Control/Login-Control/MainWindow.xaml
+++ b/Login-Control/Login-Control/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="Login_Control.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Login_Control"
+        xmlns:User_Control="clr-namespace:User_Control;assembly=User-Control" x:Class="Login_Control.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+
+        <User_Control:LoginPanel Margin="224,118,237.6,124"/>
+
     </Grid>
 </Window>
