--- a/Login-Control/User-Control/LoginPanel.xaml
+++ b/Login-Control/User-Control/LoginPanel.xaml
@@ -13,7 +13,7 @@
             <Label x:Name="lblUsuario" Content="Usuario:" Margin="29,45,218,89"/>
             <Label x:Name="lblTitulo" Content="Inicio sesión" Margin="120,10,105,0" Height="26" VerticalAlignment="Top"/>
             <Label x:Name="lblContrasenya" Content="Contraseña:" Margin="10,86,0,48" HorizontalAlignment="Left" Width="72"/>
-            <Button x:Name="btnCancelar" Content="Cancelar" Margin="215,131,10,10"/>
+            <Button x:Name="btnCancelar" Content="Cancelar" Margin="215,131,10,10" Click="onClickCancelar"/>
             <Button x:Name="btnLogin" Content="Iniciar sesión" Margin="135,131,90,10" Click="onClickLogin"/>
       
     </Grid>
