--- a/Login-Control/User-Control/LoginPanel.xaml
+++ b/Login-Control/User-Control/LoginPanel.xaml
@@ -9,7 +9,7 @@
     <Grid>
 
             <TextBox x:Name="tbUsuario" Margin="87,48,10,89" TextWrapping="Wrap"/>
-            <TextBox x:Name="tbContrasenya" Height="23" Margin="87,89,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <PasswordBox x:Name="tbContrasenya" Height="23" Margin="87,89,10,0" VerticalAlignment="Top"/>
             <Label x:Name="lblUsuario" Content="Usuario:" Margin="29,45,218,89"/>
             <Label x:Name="lblTitulo" Content="Inicio sesión" Margin="120,10,105,0" Height="26" VerticalAlignment="Top"/>
             <Label x:Name="lblContrasenya" Content="Contraseña:" Margin="10,86,0,48" HorizontalAlignment="Left" Width="72"/>
